feat: startup grpc helper method

--- a/microservices/services/authentication/dev.env
+++ b/microservices/services/authentication/dev.env
@@ -1,3 +1,4 @@
+DEBUG=true
 APP_PORT=:9009
 DATABASE_URL=postgresql://reservations:reservations@localhost:5432/crux?sslmode=disable
 JWT_SECRET=somethingsomething
